# schemeHS

./: .gitignore  .project-settings.yml  README  README.md  SchemeIn48h.cabal  license  schemeHS.cabal  test.lisp
src/: schemeHS.hs  schemeIn48h.hs
src/SchemeHS/: Evaluator.hs  Parser.hs  Types.hs
src/SchemeHS/Parser/: Bools.hs  Numbers.hs  Strings.hs  Types.hs
src/SchemeIn48h/: Parser.hs
